--- a/src/app/search/FilterHelp.m.scss
+++ b/src/app/search/FilterHelp.m.scss
@@ -8,7 +8,7 @@
     padding: 0;
     border-collapse: collapse;
     border-spacing: 0;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.15);
     width: 100%;
 
     @include phone-portrait {
@@ -56,6 +56,10 @@
 
 .search {
   margin: 8px 0 !important;
+
+  :global(.search-filter) {
+    background-color: rgba(255, 255, 255, 0.15);
+  }
 }
 
 .entry {
