Classic theme: Match PWA tint to nav header

--- a/src/app/_theme-classic.scss
+++ b/src/app/_theme-classic.scss
@@ -7,7 +7,7 @@
   --theme-app-bg-gradient: var(--theme-app-bg);
 
   // The color of PWA elements like the title bar. This cannot be a gradient.
-  --theme-pwa-background: #1d2b5e;
+  --theme-pwa-background: #000;
 
   // Header
   --theme-header-nav-bg: #000;
