--- a/src/app/character-tile/StoreHeading.scss
+++ b/src/app/character-tile/StoreHeading.scss
@@ -5,15 +5,12 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  height: 100%;
-  height: 46px;
   white-space: nowrap;
   box-sizing: border-box;
+  max-width: 237px + 16px;
 
   &.vault {
     width: calc(6px + var(--character-column-width) - var(--item-margin));
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-right: none;
 
     @include phone-portrait {
       width: auto;
