--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -294,5 +294,11 @@ select {
   filter: drop-shadow(0 0 0 #fff);
 }
 
+#temp-container {
+  // Make sure things in the temp container display above others
+  position: relative;
+  z-index: 1000;
+}
+
 /* stylelint-disable-next-line no-invalid-position-at-import-rule */
 @import 'app/dim-ui/dim-button.scss';
