Fix search bar color for all sheets

--- a/src/app/_theme.scss
+++ b/src/app/_theme.scss
@@ -87,6 +87,7 @@
 
   // Item sheet (compare, armory)
   --theme-item-sheet-bg: var(--theme-fill-modal);
+  --theme-sheet-search-bg: rgba(255, 255, 255, 0.15);
 
   // Organizer
   --theme-organizer-row-odd-bg: #27263a;
