--- a/src/app/search/search-filter.scss
+++ b/src/app/search/search-filter.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: var(--theme-search-bg);
+  background-color: var(--theme-sheet-search-bg);
   padding-left: 5px;
   padding-right: 5px;
   height: $search-bar-height;
