--- a/src/app/character-tile/CharacterTile.m.scss
+++ b/src/app/character-tile/CharacterTile.m.scss
@@ -2,19 +2,45 @@
 
 .characterTile {
   flex: 1;
-  display: flex;
   position: relative;
   height: $emblem-height;
   max-width: $emblem-width;
+  overflow: hidden;
+
+  display: grid;
+  grid-template-areas: 'emblem class power' 'emblem bottom maxTotalPower';
+  grid-template-columns: 48px 1fr min-content;
+  grid-template-rows: min-content 1fr;
+  gap: 0 6px;
+  padding-right: 6px;
+
+  // Use the emblem as a background
   background-size: $emblem-width $emblem-height;
   background-position: left center;
   background-repeat: no-repeat;
-  box-sizing: border-box;
-  &.vault {
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-right: none;
-    background-size: cover;
+
+  // Set the text off from the background
+  text-shadow:
+    1px 1px 1px rgba(0, 0, 0, 0.5),
+    0 0 10px rgba(0, 0, 0, 0.5);
+  :global(.app-icon) {
+    filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.5)) drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
   }
+}
+
+// These override .characterTile styles
+.vault {
+  // The vault tile is laid out differently
+  grid-template-areas: 'emblem class vaultCapacity';
+  grid-template-columns: 54px 1fr min-content;
+  grid-template-rows: 1fr;
+  align-items: center;
+  box-sizing: border-box;
+
+  // The vault needs a little border to stand out against some backgrounds
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-right: none;
+  background-size: cover;
 }
 
 // The "current character" triangle
@@ -27,111 +53,63 @@
   border-right: 13px solid transparent;
 }
 
-.top,
+// Either the equipped title, or the character race
 .bottom {
-  display: flex;
-  flex-flow: row nowrap;
+  grid-area: bottom;
 }
-
-.top {
-  font-size: 20px;
-  margin-top: 2px;
-
-  @include phone-portrait {
-    .maxTotalPower {
-      font-size: 12px;
-      align-self: flex-end;
-      padding-left: 4px;
-    }
-  }
-}
-
-.bottom {
+.bottom,
+.maxTotalPower {
   font-size: 12px;
-  color: var(--theme-text);
   line-height: 10px;
-  text-shadow: none;
-
-  @include phone-portrait {
-    .vault & {
-      display: grid;
-      grid-template-columns: repeat(2, 16px minmax(min-content, 1fr));
-      grid-auto-rows: 16px;
-      gap: 3px 2px;
-    }
-  }
 }
 
-.characterText {
-  flex: 1;
-  text-shadow:
-    1px 1px 1px rgba(0, 0, 0, 0.5),
-    0 0 10px rgba(0, 0, 0, 0.5);
-  display: flex;
-  flex-direction: column;
-  margin: 0 6px;
-
-  .vault & {
-    flex-direction: row;
-    align-items: center;
-    .top,
-    .bottom {
-      flex: 1;
-      margin-top: 0;
-    }
-  }
-
-  :global(.app-icon) {
-    filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.5)) drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
-  }
-}
-
+// The emblem is only shown for D1 and the vault - D2 bakes it into the
+// background
 .emblem {
+  grid-area: emblem;
+  justify-self: center;
   width: 32px;
   height: 32px;
-  margin: 0 8px;
   align-self: center;
-  background-color: rgba(0, 0, 0, 0);
-  background-size: cover;
-
-  @include phone-portrait {
-    margin-right: 15px;
-  }
-
-  .destiny2 & {
-    visibility: hidden;
-  }
 
   .vault & {
-    visibility: visible;
     height: 40px;
     width: 40px;
-    margin: 8px;
   }
 }
 
+.class,
+.powerLevel {
+  font-size: 20px;
+  margin-top: 2px;
+}
+
+// The class name (Hunter, Titan, etc)
 .class {
-  flex: 1;
+  grid-area: class;
   text-overflow: ellipsis;
   overflow: hidden;
   color: white;
 
-  // TODO: use container queries?
-  :global(.lang-ja) & {
-    font-size: 16px;
+  .vault & {
+    margin-top: 0;
   }
 
+  // TODO: use container queries?
+  :global(.lang-ja) &,
   :global(.lang-ru) .vault & {
     font-size: 16px;
   }
 }
 
+// Current power level
 .powerLevel {
+  grid-area: power;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Destiny Symbols';
   font-weight: 500;
   color: $power;
-  margin-top: 1px;
 
+  // The power icon
   :global(.app-icon) {
     vertical-align: 70%;
     font-size: 40%;
@@ -139,16 +117,22 @@
   }
 }
 
-.level {
-  margin-right: 1px;
+// The max power shown on mobile under the current power
+.maxTotalPower {
+  grid-area: maxTotalPower;
+  justify-self: self-end;
 }
 
-:global(.app-icon).classIcon {
-  width: auto;
-  height: 16px;
-  margin-right: 4px;
+// Detailed info about vault capacity, shown on mobile.
+.vaultCapacity {
+  grid-area: vaultCapacity;
+  display: grid;
+  grid-template-columns: repeat(2, 16px minmax(min-content, 1fr));
+  grid-auto-rows: 16px;
+  gap: 3px 2px;
 }
 
+// The currently equipped title (from a seal)
 .title {
   font-style: italic;
   color: #e1c2ec;
