Fix sheet style precedence issues

--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -87,7 +87,7 @@
   height: 24px;
 }
 
-.armorySheet {
+.armorySheet:global(.sheet) {
   max-width: 900px;
   margin: 0 auto;
   z-index: 14; // higher than item popup
