--- a/src/app/item-popup/ItemPopup.m.scss
+++ b/src/app/item-popup/ItemPopup.m.scss
@@ -142,13 +142,13 @@
   flex-wrap: wrap;
 }
 
-.itemPopup {
-  &:global(.sheet) :global(.sheet-header) {
+.itemPopup:global(.sheet) {
+  :global(.sheet-header) {
     padding: 0;
     border: none;
   }
   :global(.sheet-close) {
-    padding: 12px 10px;
+    padding: 10px;
     color: black;
     opacity: 0.7;
   }
