--- a/src/app/character-tile/CharacterTileButton.m.scss
+++ b/src/app/character-tile/CharacterTileButton.m.scss
@@ -5,8 +5,7 @@
   position: relative;
   white-space: nowrap;
   box-sizing: border-box;
-  max-width: $emblem-width + 16px;
-  width: calc(6px + var(--character-column-width) - var(--item-margin));
+  max-width: $emblem-width;
 
   @include phone-portrait {
     width: auto;
