--- a/src/app/character-tile/StoreHeading.m.scss
+++ b/src/app/character-tile/StoreHeading.m.scss
@@ -37,3 +37,8 @@
     );
   }
 }
+
+.characterHeader {
+  max-width: $emblem-width + 16px;
+  width: calc(6px + var(--character-column-width) - var(--item-margin));
+}
