--- a/src/app/loadout/Loadouts.m.scss
+++ b/src/app/loadout/Loadouts.m.scss
@@ -32,3 +32,12 @@
 .loadoutRow {
   padding-bottom: 10px;
 }
+
+.seasonHeader {
+  composes: flexRow from '../dim-ui/common.m.scss';
+  align-items: center;
+  gap: 0.25em;
+  margin: 16px 0 0 0;
+  border-bottom: 1px solid var(--theme-text);
+  font-size: 16px;
+}
